--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,19 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
+.DS_Store
+node_modules/
+.lotion_node*/
+
+*_blocks_data*
+
+.idea/
+
+*.iml
+*.pyc
+
+initial-rank
+initial_guess_impact_results
+*/ethereum/result/
+*enwiki*
 *.so
-*.dylib
+*.o
 
-# Test binary, build with `go test -c`
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+cyberdcli
